[package]
name = "derive_environment"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.66"
quote = "1.0.29"
syn = "2.0.23"

[lib]
proc-macro = true

[features]
debug = []
