[package]
name = "derive_environment"
version = "1.0.0"
edition = "2021"
description = "A Rust library for modifying structs via environment variables"
license = "GPL-3.0-or-later"
repository = "https://github.com/eievui5/derive-environment"

[dependencies]
encoding_rs = { version = "0.8.33", optional = true }
thiserror = "1.0.48"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.derive_environment_macros]
version = "1.0.0"
path = "derive-environment-macros"

[workspace]
members = ["derive-environment-macros"]
